Formatierungen angepasst, Fehler korrigiert

--- a/de/src/1-6-5-FAQ.md
+++ b/de/src/1-6-5-FAQ.md
@@ -2,7 +2,7 @@
 
 Experten sind in der Organisation (und meist auch außerhalb) bekannt und beliebter Ansprechpartner für Fragen zu ihren Wissensgebieten, auf die ein Nachfolger meist noch keine Antwort weiß. Um dem Nachfolger ein Hilfsmittel an die Hand zu geben, um zumindest auf die am häufigsten gestellten Fragen eine Antwort geben zu können, wird gemeinsam mit dem Experten eine sog. FAQ (Frequently Asked Questions), ein Dokument mit häufig gestellten Fragen und deren Antworten, erstellt.
 
-#### Vorgehensweise
+**Vorgehensweise:**
 
 1. Relevante Wissensgebiete, zu denen FAQs erstellt werden sollen, definieren.
 2. Medium für die Dokumentation festlegen, z.B. OneNote, Word, Wiki
@@ -11,6 +11,6 @@ Experten sind in der Organisation (und meist auch außerhalb) bekannt und belieb
 5. Antworten zu häufig gestellten Fragen formulieren und festhalten
 6. FAQs in einem moderierten Übergabegespräch mit Experte und Nachfolger durchsprechen.
 
-#### Ressourcen und Hilfsmittel
+**Ressourcen und Hilfsmittel:**
 
 * Gute Beispiele zu FAQs gibt es im [Internet FAQ Archiv](http://www.faqs.org)
